name:                skip-list
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gmalecha/skip-list#readme
license:             MIT
license-file:        LICENSE
author:              Gregory Malecha
maintainer:          gmalecha@gmail.com
copyright:           2017 Gregory Malecha
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.SkipList
  ghc-options:         -Wall -O2
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

test-suite skip-list-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  ghc-options:         -Wall
  build-depends:       base
                     , skip-list
                     , tasty
                     , tasty-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

benchmark bench-foo
  type:            exitcode-stdio-1.0
  hs-source-dirs:  bench
  main-is:         Bench.hs
  ghc-options:     -Wall
  build-depends:   base
                 , criterion
                 , skip-list
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/gmalecha/skip-list
